--- a/projects/day-13-responsive-menu/index.html
+++ b/projects/day-13-responsive-menu/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/phosphor-icons"></script>
     <script defer src="main.js"></script>
@@ -29,149 +35,19 @@
     </header>
     <!-- Main Section Demonstration -->
     <section class="main">
-      <div class="content">
-        <h1>#21 days of Code</h1>
-        <h2>
-          This is the landing page of the #21diasdecodigo, an event promoted by
-          Rocketseat
-        </h2>
-      </div>
-      <div class="cards">
-        <div class="card">
-          <h1>Day #1</h1>
-          <h2>One Repo to rule them all</h2>
-          <p>Create the repo to keep all the challenges.</p>
-          <div class="footer-card">
-            <!-- <a href="/day-2-Hello-World/index.html" target="_blank">Deploy</a> -->
-            <a
-              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-1-first-commit"
-              target="_blank"
-              >Repo</a
-            >
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #2</h1>
-          <h2>Hello World!</h2>
-          <p>Create a custom 'Hello World' page</p>
-          <div class="footer-card">
-            <a href="/day-2-Hello-World/index.html" target="_blank">Deploy</a>
-            <a
-              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-2-Hello-World"
-              target="_blank"
-              >Repo</a
-            >
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #3</h1>
-          <h2>Animated!</h2>
-          <p>Create an animated button</p>
-          <div class="footer-card">
-            <a href="/day-3-animated-button/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-3-animated-button/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #4</h1>
-          <h2>Calculate!</h2>
-          <p>Build a calculator</p>
-          <div class="footer-card">
-            <a href="/day-4-calculator/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-4-calculator/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #5</h1>
-          <h2>404</h2>
-          <p>Custom 404 "Not Found" page</p>
-          <div class="footer-card">
-            <a href="/day-5-404/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-5-404/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #6</h1>
-          <h2>Transparent!</h2>
-
-          <p>Create a card with glass effect</p>
-          <div class="footer-card">
-            <a href="/day-6-card-glass-effect/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-6-card-glass-effect/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #7</h1>
-          <h2>Counter!</h2>
-          <p>Develop a timer counter</p>
-          <div class="footer-card">
-            <a href="/day-7-timer-counter/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-7-timer-counter/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <!-- Week #2 -->
-        <div class="card">
-          <h1>Day #8</h1>
-          <h2>Let there be 'Night'!</h2>
-          <p>Create a toggle dark mode theme</p>
-          <div class="footer-card">
-            <a href="/day-8-theme-switcher/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-8-theme-switcher/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #9</h1>
-          <h2>Loading...</h2>
-          <p>Create a loading animation</p>
-          <div class="footer-card">
-            <a href="/day-9-animated-progressbar/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-9-animated-progressbar/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #10</h1>
-          <h2>Particles !!!</h2>
-          <p>Use the lib ParticleJS and build something interesting</p>
-          <div class="footer-card">
-            <a href="/day-10-particleJS/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-10-particleJS/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #11</h1>
-          <h2>Welcome User</h2>
-          <p>Build a login page layout</p>
-          <div class="footer-card">
-            <a href="/day-11-login-form/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-11-login-form/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #12</h1>
-          <h2>Art Gallery</h2>
-          <p>Build an image gallery</p>
-          <div class="footer-card">
-            <a href="/day-12-image-gallery/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-12-image-gallery/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #13</h1>
-          <h2>With responvely comes...</h2>
-          <p>Create a responsive menu</p>
-          <div class="footer-card">
-            <a href="/day-13-responsive-menu/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day-13-responsive-menu/" target="_blank">Repo</a>
-          </div>
-        </div>
-        <div class="card">
-          <h1>Day #14</h1>
-          <h2>Jeopardy !</h2>
-          <p>Create a quiz form</p>
-          <div class="footer-card">
-            <a href="#">Deploy</a>
-            <a href="#">Repo</a>
-          </div>
+      <div class="card">
+        <h1>Day #13</h1>
+        <h2>With responsively comes...</h2>
+        <p>
+          Create a responsive menu. Shrink your screen or open this page on your phone.
+        </p>
+        <div class="footer-card">
+          <!-- <a href="/day-2-Hello-World/index.html" target="_blank">Deploy</a> -->
+          <a
+            href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-13-responsive-menu/"
+            target="_blank"
+            >Repo</a
+          >
         </div>
       </div>
     </section>
