update: return to landing page link

--- a/projects/day-13-responsive-menu/index.html
+++ b/projects/day-13-responsive-menu/index.html
@@ -18,7 +18,9 @@
   <body>
     <!-- Header & Nav Menu -->
     <header>
-      <i class="ph-horse-light logo"></i>
+      <a href="https://21-dias-de-codigo-rocketseat.vercel.app/">
+        <i class="ph-horse-light logo"></i>
+      </a>
 
       <button class="mobile-toggle" aria-expanded="false">
         <i id="menu-icon" class="ph-list-light"></i>
@@ -26,7 +28,7 @@
 
       <nav class="nav">
         <ul class="nav-menu" data-visible="false">
-          <li>Works</li>
+          <li><a href="https://21-dias-de-codigo-rocketseat.vercel.app/">Projects</a></li>
           <li>Services</li>
           <li>About</li>
           <li>Contact</li>
@@ -39,7 +41,8 @@
         <h1>Day #13</h1>
         <h2>With responsively comes...</h2>
         <p>
-          Create a responsive menu. Shrink your screen or open this page on your phone.
+          Create a responsive menu. Shrink your screen or open this page on your
+          phone.
         </p>
         <div class="footer-card">
           <!-- <a href="/day-2-Hello-World/index.html" target="_blank">Deploy</a> -->
