--- a/projects/day-14-quiz/index.html
+++ b/projects/day-14-quiz/index.html
@@ -12,12 +12,58 @@
       rel="stylesheet"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
     <!-- script -->
-    <script defer src="assets/js/main.js"></script>
+    <script defer src="assets/js/main.js" type="module"></script>
     <title>Day 14 - Quiz Form</title>
   </head>
   <body>
-    <h1>Quiz</h1>
+    <section class="main">
+      <h1 class="main--title">Quiz</h1>
+      <!-- Scoreboard -->
+      <div class="scoreboard">
+        <h1 class="scoreboard--message">Parabéns</h1>
+        <p class="scoreboard--display"><strong><span>100</span>%</strong></p>
+        <p><em>
+          Você acertou <span id="scoreboard--correct-answ"><strong>5</strong></span> de
+          <span id="scoreboard--total-questions"><strong>5</strong></span> questões
+        </em></p>
+        <button id="restart">Reiniciar</button>
+      </div>
+      <!-- Quiz -->
+      <div class="quiz">
+        <p id="question">
+          <span id="question-id">1</span>
+          <span id="question-txt">Hora do almoço é hora de...</span>
+        </p>
+        <!-- Respostas -->
+        <div class="answers">
+          <button class="correct-answ">
+            <span id="answ-letter">A</span>
+            <span id="answ-text">Marmitech!</span>
+          </button>
+          <button class="wrong-answ">
+            <span id="answ-letter">B</span>
+            <span id="answ-text">Procrastinar</span>
+          </button>
+          <button>
+            <span id="answ-letter">C</span>
+            <span id="answ-text">Dormir</span>
+          </button>
+          <button>
+            <span id="answ-letter">D</span>
+            <span id="answ-text">Almoçar</span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- Answer Template -->
+    <div class="answers-template hidden">
+      <button>
+        <span id="answ-letter">A</span>
+        <span id="answ-text">Marmitech!</span>
+      </button>
+    </div>
+  </div>
   </body>
 </html>
