update: added Quiz repo/deploy to list

--- a/index.html
+++ b/index.html
@@ -241,8 +241,12 @@
           <h2>Jeopardy !</h2>
           <p>Create a quiz form</p>
           <div class="footer-card">
-            <a href="#">Deploy</a>
-            <a href="#">Repo</a>
+            <a href="projects/day-14-quiz/index.html" target="_blank">Deploy</a>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-14-quiz/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
       </div>
