update: new questions

--- a/projects/day-14-quiz/index.html
+++ b/projects/day-14-quiz/index.html
@@ -35,7 +35,7 @@
       <!-- Quiz -->
       <div class="quiz">
         <p id="question">
-          <span id="question-id">1</span>
+          <span id="question-id" class="hidden">1</span>
           <span id="question-txt">Hora do almoço é hora de...</span>
         </p>
         <!-- Respostas -->
