--- a/projects/day-15-ecomerce/index.html
+++ b/projects/day-15-ecomerce/index.html
@@ -42,7 +42,7 @@
       <div class="cta">
         <h1>Lorem, ipsum.</h1>
         <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-        <button>CTA</button>
+        <a>See Products</a>
       </div>
     </section>
     <section class="sect-products">
