--- a/projects/day-15-ecomerce/index.html
+++ b/projects/day-15-ecomerce/index.html
@@ -22,11 +22,18 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <title>Day 15 - E-Comerce</title>
   </head>
   <body>
     <header class="header">
-      <a href="#"><h1>Logo</h1></a>
+      <a class="logo" href="https://21-dias-de-codigo-rocketseat.vercel.app/">
+        <span class="material-symbols-outlined rocket"> rocket </span>
+        <h1>Rocket<span>Shop</span></h1>
+      </a>
       <div class="search">
         <input
           type="text"
@@ -40,8 +47,10 @@
       <div class="overlay"></div>
       <img src="images/Hero.png" alt="" />
       <div class="cta">
-        <h1>Lorem, ipsum.</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+        <h1>Winter sale</h1>
+        <h2>
+          Come in and check our best products
+        </h2>
         <a>See Products</a>
       </div>
     </section>
@@ -58,7 +67,9 @@
         <div class="products--cards">
           <!-- Product #1 -->
           <div class="card">
-            <img src="images/sw-01.png" alt="" />
+            <div class="card--img">
+              <img src="images/sw-01.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -67,7 +78,9 @@
           </div>
           <!-- Product #2 -->
           <div class="card">
-            <img src="images/sw-02.png" alt="" />
+            <div class="card--img">
+              <img src="images/sw-02.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -76,7 +89,9 @@
           </div>
           <!-- Product #3 -->
           <div class="card">
-            <img src="images/sw-03.png" alt="" />
+            <div class="card--img">
+              <img src="images/sw-03.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -85,7 +100,9 @@
           </div>
           <!-- Product #4 -->
           <div class="card">
-            <img src="images/sw-04.png" alt="" />
+            <div class="card--img">
+              <img src="images/sw-04.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -94,7 +111,9 @@
           </div>
           <!-- Product #5 -->
           <div class="card">
-            <img src="images/sw-05.png" alt="" />
+            <div class="card--img">
+              <img src="images/sw-05.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -103,7 +122,31 @@
           </div>
           <!-- Product #6 -->
           <div class="card">
-            <img src="images/sw-06.png" alt="" />
+            <div class="card--img">
+              <img src="images/sw-06.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #6 -->
+          <div class="card">
+            <div class="card--img">
+              <img src="images/sw-09.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #6 -->
+          <div class="card">
+            <div class="card--img">
+              <img src="images/sw-10.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -125,7 +168,9 @@
         <div class="products--cards">
           <!-- Product #1 -->
           <div class="card">
-            <img src="images/games-01.png" alt="" />
+            <div class="card--img">
+              <img src="images/games-01.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -134,7 +179,9 @@
           </div>
           <!-- Product #2 -->
           <div class="card">
-            <img src="images/games-02.png" alt="" />
+            <div class="card--img">
+              <img src="images/games-02.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -143,7 +190,9 @@
           </div>
           <!-- Product #3 -->
           <div class="card">
-            <img src="images/games-03.png" alt="" />
+            <div class="card--img">
+              <img src="images/games-03.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -152,7 +201,9 @@
           </div>
           <!-- Product #4 -->
           <div class="card">
-            <img src="images/games-04.png" alt="" />
+            <div class="card--img">
+              <img src="images/games-04.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -161,7 +212,9 @@
           </div>
           <!-- Product #5 -->
           <div class="card">
-            <img src="images/games-05.png" alt="" />
+            <div class="card--img">
+              <img src="images/games-05.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -169,8 +222,43 @@
             </div>
           </div>
           <!-- Product #6 -->
+          <div class="card--img">
+            <div class="card">
+              <img src="images/games-06.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #7 -->
           <div class="card">
-            <img src="images/games-06.png" alt="" />
+            <div class="card--img">
+              <img src="images/games-07.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #8 -->
+          <div class="card">
+            <div class="card--img">
+              <img src="images/games-08.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #9 -->
+          <div class="card">
+            <div class="card--img">
+              <img src="images/games-09.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -192,7 +280,9 @@
         <div class="products--cards">
           <!-- Product #1 -->
           <div class="card">
-            <img src="images/sorts-01.png" alt="" />
+            <div class="card--img">
+              <img src="images/sorts-01.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -201,7 +291,9 @@
           </div>
           <!-- Product #2 -->
           <div class="card">
-            <img src="images/sorts-02.png" alt="" />
+            <div class="card--img">
+              <img src="images/sorts-02.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -210,7 +302,9 @@
           </div>
           <!-- Product #3 -->
           <div class="card">
-            <img src="images/sorts-03.png" alt="" />
+            <div class="card--img">
+              <img src="images/sorts-03.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -219,7 +313,9 @@
           </div>
           <!-- Product #4 -->
           <div class="card">
-            <img src="images/sorts-04.png" alt="" />
+            <div class="card--img">
+              <img src="images/sorts-04.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -228,7 +324,9 @@
           </div>
           <!-- Product #5 -->
           <div class="card">
-            <img src="images/sorts-05.png" alt="" />
+            <div class="card--img">
+              <img src="images/sorts-05.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -237,7 +335,42 @@
           </div>
           <!-- Product #6 -->
           <div class="card">
-            <img src="images/sorts-06.png" alt="" />
+            <div class="card--img">
+              <img src="images/sorts-06.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #7 -->
+          <!-- <div class="card">
+            <div class="card--img">
+              <img src="images/sorts-07.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div> -->
+          <!-- Product #8 -->
+          <div class="card">
+            <div class="card--img">
+              <img src="images/sorts-08.png" alt="" />
+            </div>
+            <div class="card--info">
+              <h3 class="prod-name">Product #</h3>
+              <p class="prod-price"><strong>R$ 60, 00</strong></p>
+              <a class="prod-link" href="#">More info</a>
+            </div>
+          </div>
+          <!-- Product #9 -->
+          <div class="card">
+            <div class="card--img">
+              <img src="images/sorts-09.png" alt="" />
+            </div>
             <div class="card--info">
               <h3 class="prod-name">Product #</h3>
               <p class="prod-price"><strong>R$ 60, 00</strong></p>
@@ -251,25 +384,24 @@
     <!-- Footer -->
     <footer>
       <!-- <div> -->
-        <div class="list">
-          <a href="#"><h1>Logo</h1></a>
-          <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Privacy Politics</a></li>
-            <li><a href="#">Fidelity Program</a></li>
-            <li><a href="#">Our Stores</a></li>
-          </ul>
-        </div>
-        <form class="contact-form">
-          <fieldset>
-            <legend>Contact Us</legend>
-            <input type="text" placeholder="Enter your name" />
-            <textarea placeholder="Type your message"></textarea>
-            <button>Submit</button>
-          </fieldset>
-        </form>
+      <div class="list">
+        <a href="#"><h1>Logo</h1></a>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Privacy Politics</a></li>
+          <li><a href="#">Fidelity Program</a></li>
+          <li><a href="#">Our Stores</a></li>
+        </ul>
+      </div>
+      <form class="contact-form">
+        <fieldset>
+          <legend>Contact Us</legend>
+          <input type="text" placeholder="Enter your name" />
+          <textarea placeholder="Type your message"></textarea>
+          <button>Submit</button>
+        </fieldset>
+      </form>
       <!-- </div> -->
-
     </footer>
     <div class="attribuition">
       <h3>Developed by <a href="#">Felipe F.</a></h3>
