update: added day 15 to projects

--- a/index.html
+++ b/index.html
@@ -249,6 +249,19 @@
             >
           </div>
         </div>
+        <div class="card">
+          <h1>Day #15</h1>
+          <h2>Buy, buy, buy!</h2>
+          <p>Create an e-commerce showcase</p>
+          <div class="footer-card">
+            <a href="projects/day-15-ecomerce/index.html" target="_blank">Deploy</a>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-15-ecomerce/"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
       </div>
     </section>
   </body>
