--- a/projects/day-16-api/index.html
+++ b/projects/day-16-api/index.html
@@ -4,12 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/style.css" />
+    <!-- Script -->
     <script defer src="js/main.js" type="module"></script>
     <title>Day 16 - API</title>
   </head>
   <body>
-    <section>
-      <h1>Movies</h1>
+    <header class="header">
+      <a class="logo" href="https://21-dias-de-codigo-rocketseat.vercel.app/">
+        <span class="material-symbols-outlined rocket"> rocket </span>
+        <h1>Rocket<span>Flix</span></h1>
+      </a>
+      <div class="search">
+        <input
+          type="text"
+          class="input-search"
+          placeholder="Search something"
+        />
+        <span class="material-symbols-outlined search-icon"> search </span>
+      </div>
+    </header>
+    <section class="featured">
+      <div id="featured-movie" class="featured-movie"></div>
+    </section>
+    <section class="main">
+      <h1>Popular</h1>
       <div id="movies" class="movies"></div>
     </section>
   </body>
