update: attribution section

--- a/projects/day-16-api/index.html
+++ b/projects/day-16-api/index.html
@@ -28,21 +28,27 @@
         <span class="material-symbols-outlined rocket"> rocket </span>
         <h1>Rocket<span>Flix</span></h1>
       </a>
-      <div class="search">
+      <!-- <div class="search">
         <input
           type="text"
           class="input-search"
           placeholder="Search something"
         />
         <span class="material-symbols-outlined search-icon"> search </span>
-      </div>
+      </div> -->
     </header>
     <section class="featured">
       <div id="featured-movie" class="featured-movie"></div>
     </section>
     <section class="main">
+      <div id="loader" class="loader"></div>
+      <div id="searchResult" class="search-result"></div>
       <h1>Popular</h1>
       <div id="movies" class="movies"></div>
     </section>
+    <div class="attribuition">
+      <h3>Developed by <a href="#">Felipe F.</a></h3>
+      <h4>2022 - Rocketseat #21diasdecodigo</h4>
+    </div>
   </body>
 </html>
