--- a/index.html
+++ b/index.html
@@ -262,6 +262,19 @@
             >
           </div>
         </div>
+        <div class="card">
+          <h1>Day #16</h1>
+          <h2>Hey kid, want some API?</h2>
+          <p>Develop an app consuming an API</p>
+          <div class="footer-card">
+            <a href="projects/day-16-api/index.html" target="_blank">Deploy</a>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-16-api/"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
       </div>
     </section>
   </body>
