--- a/projects/day-17-keyboard-evt/index.html
+++ b/projects/day-17-keyboard-evt/index.html
@@ -11,13 +11,25 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/main.js"></script>
     <title>Day 17 - Keyboard Events</title>
   </head>
   <body>
+    <header class="header">
+      <a class="logo" href="https://21-dias-de-codigo-rocketseat.vercel.app/">
+        <span class="material-symbols-outlined rocket"> rocket </span>
+        <h1>Rocket<span>Drums</span></h1>
+      </a>
+    </header>
+
     <section class="main">
-      <h1>Keyboard</h1>
       <div class="teclas">
         <div data-key="keyq" class="tecla q">Q</div>
         <div data-key="keyw" class="tecla w">W</div>
