update: added day 17 to list

--- a/index.html
+++ b/index.html
@@ -275,6 +275,19 @@
             >
           </div>
         </div>
+        <div class="card">
+          <h1>Day #17</h1>
+          <h2>Check the Drums</h2>
+          <p>Capture and show the wich key is pressed</p>
+          <div class="footer-card">
+            <a href="projects/day-17-keyboard-evt/index.html" target="_blank">Deploy</a>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-17-keyboard-evt"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
       </div>
     </section>
   </body>
