--- a/projects/day-18-password-gen/index.html
+++ b/projects/day-18-password-gen/index.html
@@ -7,6 +7,6 @@
   <title>Day 18 - Password Generator</title>
 </head>
 <body>
-  
+  <div id="generated-psw" class="psw-output"></div>  
 </body>
 </html>
