--- a/projects/day-18-password-gen/index.html
+++ b/projects/day-18-password-gen/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script defer src="js/main.js"></script>
   <title>Day 18 - Password Generator</title>
 </head>
 <body>
-  <div id="generated-psw" class="psw-output"></div>  
+  <button id="btn-genpass">Generated Password</button>
+  <div id="pswOutput" class="psw-output">Password here</div>  
 </body>
 </html>
