--- a/projects/day-18-password-gen/index.html
+++ b/projects/day-18-password-gen/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script defer src="js/main.js"></script>
-  <title>Day 18 - Password Generator</title>
-</head>
-<body>
-  <button id="btn-genpass">Generated Password</button>
-  <div id="pswOutput" class="psw-output">Password here</div>  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/main.js"></script>
+    <title>Day 18 - Password Generator</title>
+  </head>
+  <body>
+    <header class="header">
+      <a class="logo" href="https://21-dias-de-codigo-rocketseat.vercel.app/">
+        <span class="material-symbols-outlined rocket"> rocket </span>
+        <h1>Rocket<span>Drums</span></h1>
+      </a>
+    </header>
+    <section class="main">
+      <button id="btnGenpass" class="btn-genpass">Generate Password</button>
+      <div class="psw-output">
+        <p id="pswOutput"></p>
+        <span id="btnCopy" class="material-symbols-outlined"> content_copy </span>
+      </div>
+    </section>
+  </body>
 </html>
