update: added spinner loader

--- a/projects/day-18-password-gen/index.html
+++ b/projects/day-18-password-gen/index.html
@@ -25,14 +25,17 @@
     <header class="header">
       <a class="logo" href="https://21-dias-de-codigo-rocketseat.vercel.app/">
         <span class="material-symbols-outlined rocket"> rocket </span>
-        <h1>Rocket<span>Drums</span></h1>
+        <h1>Rocket<span>Sec</span></h1>
       </a>
     </header>
     <section class="main">
       <button id="btnGenpass" class="btn-genpass">Generate Password</button>
-      <div class="psw-output">
+      <div class="loader"></div>
+      <div class="output-container">
         <p id="pswOutput"></p>
-        <span id="btnCopy" class="material-symbols-outlined"> content_copy </span>
+        <span id="btnCopy" class="material-symbols-outlined">
+          content_copy
+        </span>
       </div>
     </section>
   </body>
