--- a/projects/day-18-password-gen/index.html
+++ b/projects/day-18-password-gen/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <a class="logo" href="https://21-dias-de-codigo-rocketseat.vercel.app/">
         <span class="material-symbols-outlined rocket"> rocket </span>
-        <h1>Rocket<span>Sec</span></h1>
+        <h1>Rocket<span>Pass</span></h1>
       </a>
     </header>
     <section class="main">
