update: added day 18 to list

--- a/index.html
+++ b/index.html
@@ -288,6 +288,19 @@
             >
           </div>
         </div>
+        <div class="card">
+          <h1>Day #18</h1>
+          <h2>Admin Admin</h2>
+          <p>You need a strong password, check this app</p>
+          <div class="footer-card">
+            <a href="projects/day-18-password-gen/index.html" target="_blank">Deploy</a>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-18-password-gen"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
       </div>
     </section>
   </body>
