--- a/projects/day-19-unsplash-random/index.html
+++ b/projects/day-19-unsplash-random/index.html
@@ -16,6 +16,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- JS -->
+    <script defer src="js/main.js"></script>
     <title>Day 19 - Unsplash Random Images</title>
   </head>
   <body>
@@ -26,7 +30,50 @@
       </a>
     </header>
     <section class="main">
-      <h1>Unsplash</h1>
+      <h1>Unsplash Random Images</h1>
+      <h2>Choose your category:</h2>
+      <!-- <button id="btnGenImg">Generate</button> -->
+      <div class="button-container">
+        <input
+          type="button"
+          id="btnGenImg"
+          class="btnGenImg"
+          data-key="console"
+          value="Games"
+        />
+        <input
+          type="button"
+          id="btnGenImg2"
+          class="btnGenImg"
+          data-key="tech"
+          value="Tech"
+        />
+        <input
+          type="button"
+          id="btnGenImg3"
+          class="btnGenImg"
+          data-key="mountains"
+          value="Mountains"
+        />
+        <input
+          type="button"
+          id="btnGenImg4"
+          class="btnGenImg"
+          data-key="programming"
+          value="Code"
+        />
+        <input
+          type="button"
+          id="btnGenImg4"
+          class="btnGenImg"
+          data-key="cats"
+          value="Cats"
+        />
+      </div>
+
+      <div class="image-container">
+        <img src="https://placekitten.com/500/500" alt="" />
+      </div>
     </section>
   </body>
 </html>
