update: adding day 19 to list

--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
           <h2>Buy, buy, buy!</h2>
           <p>Create an e-commerce showcase</p>
           <div class="footer-card">
-            <a href="projects/day-15-ecomerce/index.html" target="_blank">Deploy</a>
+            <a href="projects/day-15-ecomerce/index.html" target="_blank"
+              >Deploy</a
+            >
             <a
               href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-15-ecomerce/"
               target="_blank"
@@ -280,7 +282,9 @@
           <h2>Check the Drums</h2>
           <p>Capture and show the wich key is pressed</p>
           <div class="footer-card">
-            <a href="projects/day-17-keyboard-evt/index.html" target="_blank">Deploy</a>
+            <a href="projects/day-17-keyboard-evt/index.html" target="_blank"
+              >Deploy</a
+            >
             <a
               href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-17-keyboard-evt"
               target="_blank"
@@ -293,9 +297,26 @@
           <h2>Admin Admin</h2>
           <p>You need a strong password, check this app</p>
           <div class="footer-card">
-            <a href="projects/day-18-password-gen/index.html" target="_blank">Deploy</a>
+            <a href="projects/day-18-password-gen/index.html" target="_blank"
+              >Deploy</a
+            >
             <a
               href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-18-password-gen"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <h1>Day #19</h1>
+          <h2>Click and Splash !</h2>
+          <p>Random Images from Unsplash</p>
+          <div class="footer-card">
+            <a href="projects/day-19-unsplash-random/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-19-unsplash-random"
               target="_blank"
               >Repo</a
             >
