--- a/projects/day-20-emoji-picker/index.html
+++ b/projects/day-20-emoji-picker/index.html
@@ -31,7 +31,9 @@
       </a>
     </header>
     <section class="main">
+      <h3 class="instructions">Click on the emoji to copy to clipboard</h3>
       <div id="emojieDiv" class="emoji-render">
+        <!-- Template -->
         <!-- <div class="emoji-card">
           <span class="tooltip-text">Copied !</span>
           <span class="emoji-char">💜</span>
@@ -47,6 +49,7 @@
           <span class="emoji-char">🖱️</span>
           <span class="unicode-name">computer mouse</span>
         </div> -->
+        <!-- Template -->
       </div>
     </section>
   </body>
