update: add day 20 to list

--- a/index.html
+++ b/index.html
@@ -322,6 +322,21 @@
             >
           </div>
         </div>
+        <div class="card">
+          <h1>Day #20</h1>
+          <h2>Emoji Time !</h2>
+          <p>Web application that display emojies and copy it to clipboard</p>
+          <div class="footer-card">
+            <a href="projects/day-20-emoji-picker/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-20-emoji-picker"
+              target="_blank"
+              >Repo</a
+            >
+          </div>
+        </div>
       </div>
     </section>
   </body>
